--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
-    "react-tooltip": "^5.25.1"
+    "react-tooltip": "^5.25.1",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
